--- a/deel-1-flexbox-positioneren/index.html
+++ b/deel-1-flexbox-positioneren/index.html
@@ -11,7 +11,7 @@
 <h3>Opdracht 1</h3>
 <img src="assets/images/opdracht-1-eindresultaat.jpg" alt="opdracht-1 voorbeeld">
 <section class="opdracht-1">
-    <ul>
+    <ul class="flex1">
         <li>Home</li>
         <li>Products</li>
         <li>About us</li>
@@ -24,7 +24,7 @@
 <h3>Opdracht 2</h3>
 <img src="assets/images/opdracht-2-eindresultaat.jpg" alt="opdracht-2 voorbeeld">
 <section class="opdracht-2">
-    <ul>
+    <ul class="flex2">
         <li>Ik heb niet zo veel tekst</li>
         <li>Ik heb al wat meer text dan de vorige paragraaf</li>
         <li>Ik heb heel veel content. Zo veel content dat deze paragraaf aanzienlijk langer is dan de twee vorige. </li>
@@ -36,10 +36,10 @@
 <h3>Opdracht 3</h3>
 <img src="assets/images/opdracht-3-eindresultaat.jpg" alt="opdracht-3 voorbeeld">
 <section class="opdracht-3">
-    <ul>
-        <li>Top left</li>
-        <li>Centered</li>
-        <li>Bottom right</li>
+    <ul class="flex-container">
+        <li class="top">Top left</li>
+        <li class="center">Centered</li>
+        <li class="bottom">Bottom right</li>
     </ul>
 </section>
 <!-- E I N D E  O P D R A C H T  3 -->
@@ -76,16 +76,16 @@
 <h3>Opdracht 5</h3>
 <img src="assets/images/opdracht-5-eindresultaat.jpg" alt="opdracht-5 voorbeeld">
 <section class="opdracht-5">
-    <div>
-        <ul>
+    <div class="flex-container">
+        <ul class="column1">
             <li>Column 1 top</li>
             <li>Column 1 bottom</li>
         </ul>
-        <ul>
+        <ul class="column2">
             <li>Column 2 top</li>
             <li>Column 2 bottom</li>
         </ul>
-        <ul>
+        <ul class="column3">
             <li>Column 3 top</li>
             <li>Column 3 bottom</li>
         </ul>
