--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -5,12 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
     <link rel="stylesheet" href="styles/styles.css">
     <title>Flexbox opdracht 3</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
-    <div>
+<body class="body-layout">
+<nav class="navbar">
+<ul class="navbar1">
+    <li class="analytica">ANALYTICA</li>
+
+</ul>
+
+    <ul class="navbar2">
+        <li>About us</li>
+        <li> Strategy</li>
+        <li>Prices</li>
+        <li>contact</li>
+    </ul>
+</nav>
+
+    <div class="flex-container">
         <h1>All Your Business Data in One Place</h1>
         <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
             analytics tools.</h3>
     </div>
+<section class="head-box">
+    <p class="box1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+    <p class="box2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+    <p class="box3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+</section>
+
 </body>
 </html>
